--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,7 @@ jobs:
     steps:
       - name: Runs on Ubuntu 20.04 - Node.js 16
       - name: 
+        run: npm -v
         uses: actions/checkout@v3
       - name: Setting up environment
         uses: actions/setup-node@v3.4.1
