--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -18,8 +18,10 @@ jobs:
       - name: Building
         run: yarn docs:build
   Deploy:
-    - needs: Build
-      name: Deploy
+    needs: Build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy
         uses: wlixcc/SFTP-Deploy-Action@v1.2.4
         with:
           username: root
