--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -4,9 +4,7 @@ on:
   workflow_dispatch:
   push:
   pull_request:
-    branches:
-      - main
-      - prtest
+    types: [opened, reopened]
 
 jobs:
   build:
