--- a/.github/workflows/checkprtest.yml
+++ b/.github/workflows/checkprtest.yml
@@ -28,7 +28,7 @@ jobs:
     runs-on: ubuntu-latest
 #    env:
 #      PRID: $(echo $GITHUB_REF | awk 'BEGIN { FS = "/" } ; { print $3 }') >> $GITHUB_ENV
-#    steps:
+    steps:
 #      - name: Downloading build artifact
 #        uses: actions/download-artifact@v3.0.0
 #        with:
