--- a/.github/workflows/checkprtest.yml
+++ b/.github/workflows/checkprtest.yml
@@ -26,8 +26,8 @@ jobs:
   Preview:
 #    needs: Build
     runs-on: ubuntu-latest
-#    env:
-#      PRID: $(echo $GITHUB_REF | awk 'BEGIN { FS = "/" } ; { print $3 }') >> $GITHUB_ENV
+    env:
+      PR_NUMBER: $(echo $GITHUB_REF | awk 'BEGIN { FS = "/" } ; { print $3 }') >> $GITHUB_ENV
     steps:
 #      - name: Downloading build artifact
 #        uses: actions/download-artifact@v3.0.0
@@ -52,10 +52,13 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.ghtoken }}
           comment: |
             ### Thanks for your contribution
+
+            **This message was sent automatically by CI**
+
             If you can see this message, your check has already passed
 
             Here is your Preview Link, please check if your expectations are met
 
             If the answer is no, please close this PR immediatly
 
-            [Check Your Code](https://prev.lancex.top/dspd/
+            [Check Your Code](https://prev.lancex.top/dspd/${{ env.PR_NUMBER }}
