--- a/.github/workflows/checkprtest.yml
+++ b/.github/workflows/checkprtest.yml
@@ -5,47 +5,46 @@ on:
     types: [opened, reopened]
 
 jobs:
-#  Check:
-#    runs-on: ubuntu-latest 
-#    steps:
-#      - name: Initializing
-#        uses: actions/checkout@v3
-#      - name: Setting up environment
-#        uses: actions/setup-node@v3.4.1
-#        with:
-#          node-version: 16
-#      - name: Installing dependencies
-#        run: yarn add -D vuepress@next
-#      - name: Building
-#        run: yarn docs:build
-#      - name: Uploading artifacts
-#        uses: actions/upload-artifact@v3.1.0
-#        with:
-#          name: DSPD-web
-#          path: public
-  Preview:
-#    needs: Build
-    runs-on: ubuntu-latest
-
+  Check:
+    runs-on: ubuntu-latest 
     steps:
-#      - name: Downloading build artifact
-#        uses: actions/download-artifact@v3.0.0
-#        with:
-#          name: DSPD-web
-#          path: public
-#      - name: Deploy
-#        uses: wlixcc/SFTP-Deploy-Action@v1.2.4
-#        with:
-#          username: root
-#          server: ${{ secrets.serverip }}
-#          port: ${{ secrets.serverport }}
-#          ssh_private_key: ${{ secrets.serversshkey }}
-#          local_path: './public/*'
-#          remote_path: '/site/prev/dspd/${{ env.PRID }}'
-#          sftp_only: false
-#          sftpArgs: '-o ConnectTimeout=5'
-#          delete_remote_files: true
-      - name: awa
+      - name: Initializing
+        uses: actions/checkout@v3
+      - name: Setting up environment
+        uses: actions/setup-node@v3.4.1
+        with:
+          node-version: 16
+      - name: Installing dependencies
+        run: yarn add -D vuepress@next
+      - name: Building
+        run: yarn docs:build
+      - name: Uploading artifacts
+        uses: actions/upload-artifact@v3.1.0
+        with:
+          name: DSPD-web
+          path: public
+  Preview:
+    needs: Build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Downloading build artifact
+        uses: actions/download-artifact@v3.0.0
+        with:
+          name: DSPD-web
+          path: public
+      - name: Deploy
+        uses: wlixcc/SFTP-Deploy-Action@v1.2.4
+        with:
+          username: root
+          server: ${{ secrets.serverip }}
+          port: ${{ secrets.serverport }}
+          ssh_private_key: ${{ secrets.serversshkey }}
+          local_path: './public/*'
+          remote_path: '/site/prev/dspd/${{ env.PR_NUMBER }}'
+          sftp_only: false
+          sftpArgs: '-o ConnectTimeout=5'
+          delete_remote_files: true
+      - name: Get PR ID
         run: echo PR_NUMBER=$(echo $GITHUB_REF | awk 'BEGIN { FS = "/" } ; { print $3 }') >> $GITHUB_ENV
       - name: Comment to PR
         uses: JoseThen/comment-pr@v1.1.1
@@ -62,4 +61,4 @@ jobs:
 
             If the answer is no, please close this PR immediatly
 
-            [Check Your Code](https://prev.lancex.top/dspd/${{ env.PR_NUMBER }}
+            [Check Your Code](https://prev.lancex.top/dspd/${{ env.PR_NUMBER }})
